--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -40,7 +40,6 @@ allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.3.74;
 allow 104.219.236.100;
-allow 104.244.72.115;
 allow 104.244.72.132;
 allow 104.244.73.136;
 allow 104.244.73.190;
@@ -59,6 +58,7 @@ allow 104.244.78.233;
 allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
+allow 104.254.90.195;
 allow 107.174.146.25;
 allow 107.189.10.175;
 allow 107.189.1.111;
@@ -305,6 +305,7 @@ allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
+allow 185.183.192.147;
 allow 185.191.204.254;
 allow 185.193.52.180;
 allow 185.195.71.244;
@@ -588,7 +589,6 @@ allow 194.163.157.49;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 194.87.55.98;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -1049,7 +1049,6 @@ allow 2605:6400:30:f7ca::2;
 allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
-allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
@@ -1451,6 +1450,7 @@ allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
+allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:e300:b:b::b;
 allow 2a0d:8140:1fff:2a21::1;
 allow 2a0d:8140:1fff:2c04::1;
@@ -1524,7 +1524,6 @@ allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
@@ -1585,7 +1584,6 @@ allow 2a12:a800:2:1:45:141:215:95;
 allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:167;
 allow 2a12:a800:2:1:45:80:158:23;
-allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a12:a800:8:1:45:94:31:68;
 allow 2a12:a800:9:1:193:26:115:140;
@@ -1693,7 +1691,6 @@ allow 45.66.35.35;
 allow 45.79.144.222;
 allow 45.80.158.167;
 allow 45.80.158.23;
-allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.83.104.137;
 allow 45.83.31.79;
@@ -1855,6 +1852,7 @@ allow 84.239.46.144;
 allow 85.239.41.130;
 allow 85.90.196.162;
 allow 85.93.218.204;
+allow 85.93.31.31;
 allow 86.54.25.3;
 allow 86.54.28.49;
 allow 87.118.110.27;
