--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -31,7 +31,6 @@ set_real_ip_from 103.164.54.199;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.20.241.102;
-set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.28.52.93;
@@ -47,7 +46,6 @@ set_real_ip_from 104.244.73.43;
 set_real_ip_from 104.244.74.229;
 set_real_ip_from 104.244.74.23;
 set_real_ip_from 104.244.74.97;
-set_real_ip_from 104.244.75.140;
 set_real_ip_from 104.244.75.74;
 set_real_ip_from 104.244.76.237;
 set_real_ip_from 104.244.77.208;
@@ -72,6 +70,7 @@ set_real_ip_from 107.189.13.180;
 set_real_ip_from 107.189.13.251;
 set_real_ip_from 107.189.13.253;
 set_real_ip_from 107.189.13.254;
+set_real_ip_from 107.189.13.91;
 set_real_ip_from 107.189.14.4;
 set_real_ip_from 107.189.14.43;
 set_real_ip_from 107.189.1.9;
@@ -84,7 +83,6 @@ set_real_ip_from 107.189.30.69;
 set_real_ip_from 107.189.30.86;
 set_real_ip_from 107.189.3.11;
 set_real_ip_from 107.189.31.33;
-set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
@@ -94,7 +92,6 @@ set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
 set_real_ip_from 107.189.7.144;
 set_real_ip_from 107.189.7.168;
-set_real_ip_from 107.189.8.133;
 set_real_ip_from 107.189.8.136;
 set_real_ip_from 107.189.8.181;
 set_real_ip_from 107.189.8.226;
@@ -1001,14 +998,12 @@ set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d896;
 set_real_ip_from 2605:6400:20:ff9::1;
 set_real_ip_from 2605:6400:30:e948:4cee:191b:1e55:25b3;
 set_real_ip_from 2605:6400:30:ea52:4246:fb82:f36c:8ede;
-set_real_ip_from 2605:6400:30:ea86:59b6:d4c6:5192:1a19;
 set_real_ip_from 2605:6400:30:eb71:51b7:4869:7579:3aa1;
 set_real_ip_from 2605:6400:30:ebb6:532:acc:65:31;
 set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
-set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
@@ -1030,7 +1025,6 @@ set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 set_real_ip_from 2605:6400:30:f503::1;
-set_real_ip_from 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 set_real_ip_from 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 set_real_ip_from 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
@@ -1260,6 +1254,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1280,7 +1275,6 @@ set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
-set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
@@ -1490,7 +1484,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
-set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -1758,6 +1751,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1795,6 +1789,7 @@ set_real_ip_from 5.79.66.19;
 set_real_ip_from 5.8.18.30;
 set_real_ip_from 5.8.18.99;
 set_real_ip_from 62.171.137.169;
+set_real_ip_from 62.182.84.146;
 set_real_ip_from 62.72.47.105;
 set_real_ip_from 64.190.76.2;
 set_real_ip_from 64.190.76.3;
@@ -1894,7 +1889,6 @@ set_real_ip_from 93.113.25.239;
 set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
-set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
