--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -159,7 +159,6 @@ set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d887;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d896;
 set_real_ip_from 2605:6400:20:ff9::1;
-set_real_ip_from 2605:6400:30:e948:4cee:191b:1e55:25b3;
 set_real_ip_from 2605:6400:30:ea52:4246:fb82:f36c:8ede;
 set_real_ip_from 2605:6400:30:eb71:51b7:4869:7579:3aa1;
 set_real_ip_from 2605:6400:30:ebb6:532:acc:65:31;
@@ -182,9 +181,7 @@ set_real_ip_from 2605:6400:30:f174:4:3:2:1;
 set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
-set_real_ip_from 2605:6400:30:f3d3:7c3:507c:6f32:c132;
 set_real_ip_from 2605:6400:30:f414:42ce:c612:dab8:1337;
-set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 set_real_ip_from 2605:6400:30:f503::1;
@@ -586,12 +583,8 @@ set_real_ip_from 2a0b:f4c2:4::99;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
@@ -646,6 +639,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
+set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
