--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -159,7 +159,7 @@ deny 2605:6400:20:be7::1;
 deny 2605:6400:20:c26:5163:253e:1ef6:d887;
 deny 2605:6400:20:c26:5163:253e:1ef6:d896;
 deny 2605:6400:20:ff9::1;
-deny 2605:6400:30:ea52:4246:fb82:f36c:8ede;
+deny 2605:6400:30:e948:4cee:191b:1e55:25b3;
 deny 2605:6400:30:eb71:51b7:4869:7579:3aa1;
 deny 2605:6400:30:ebb6:532:acc:65:31;
 deny 2605:6400:30:ed0c:b477:4972:756a:2f42;
@@ -193,13 +193,11 @@ deny 2605:6400:30:f623:5a78:29a6:8492:27b0;
 deny 2605:6400:30:f753:891d:ee77:e97c:741a;
 deny 2605:6400:30:f77f:f41c:2bce:7d61:210b;
 deny 2605:6400:30:f77f:f41c:2bce:7d61:2e06;
-deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 deny 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 deny 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 deny 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 deny 2605:6400:30:f8b5:620c:dc25:c624:aafd;
-deny 2605:6400:30:f8d5::1;
 deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
 deny 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
@@ -599,21 +597,6 @@ deny 2a0c:e300:b:b::b;
 deny 2a0d:8140:1fff:2a21::1;
 deny 2a0d:8140:1fff:2c04::1;
 deny 2a0d:8140:1fff:c510::1;
-deny 2a0d:bbc7:0:1::10a;
-deny 2a0d:bbc7:0:1::132;
-deny 2a0d:bbc7:0:1::1df;
-deny 2a0d:bbc7:0:1::254;
-deny 2a0d:bbc7:0:1::2ef;
-deny 2a0d:bbc7:0:1::320;
-deny 2a0d:bbc7:0:1::328;
-deny 2a0d:bbc7:0:1::36c;
-deny 2a0d:bbc7:0:1::38c;
-deny 2a0d:bbc7:0:1::394;
-deny 2a0d:bbc7:0:1::3bd;
-deny 2a0d:bbc7:0:1::3cc;
-deny 2a0d:bbc7:0:1::3d5;
-deny 2a0d:bbc7:0:1::50;
-deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
